--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Homework 4</title>
+    <title>My Homework 6</title>
     <link href="css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body onload = "run_js()">
-    <h1>Patrick Kim Homework 4</h1>
     <script type = "text/javascript" src = "script/script.js"></script>
+    <div id = "row">
+        <div id = "clist">
+            <h1>Candidate List</h1>
+        </div>
+        <div id = "create">
+            <h1>Create a Candidate</h1>
+            <input type = "text" placeholder = "Name">
+            <button type = "submit" class = "btn btn-primary btn-md">Create</button>
+        </div>
+    </div>
 </body>
 </html>
